--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,22 @@ a {
 ul {
   list-style-type: none;
 }
+
+.header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px;
+}
+
+ul {
+  display: flex;
+  justify-content: flex-start;
+  gap: 16px;
+}
+
+.notifications {
+  margin-left: auto;
+  margin-right: 16px;
+}
+
